k8s/base/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: creatorsaas
